--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="inner">
         <h1>Logic Block</h1>
         <h2>Open hardware logic gates breakouts boards</h2>
-        <a href="https://github.com/logicblock" class="button"><small>Follow me on</small> GitHub</a>
+        <a href="https://github.com/logicblock" class="button" target="_blank"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
 
@@ -65,14 +65,14 @@
 <h3>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h3>
 
-<p><strong>Logic Block's</strong> are licenced under <a href="https://github.com/logicblock/7408-Quad-AND/blob/master/LICENSE.md">Creative Commons Attribution and Share Alike 4.0 International</a> by <a href="http://www.jrodrigo.net">J.Rodrigo</a>.</p>
+<p><strong>Logic Block's</strong> are licenced under <a href="https://github.com/logicblock/logicblock.github.io/blob/master/LICENSE.md" target="_blank">Creative Commons Attribution and Share Alike 4.0 International</a> by <a href="http://www.jrodrigo.net" target="_blank">J.Rodrigo</a>.</p>
         </section>
 
         <aside id="sidebar">
 
 
-          <p style="text-align: center;">Coming soon on Tindie =)</p>
-          <p style="text-align: center;"><a href="https://www.tindie.com/products/JRodrigo/flash-cartridge-for-gameboy-/" target="_blank"><img src="images/tindie.png" alt="tindie" width="236" height="122"></a></p>
+          <p style="text-align: center;">Coming soon on Tindie <img class="middle" style="padding-bottom:4px;" src="images/Emoji Smiley-01.png" alt="tindie" height="22"></p>
+          <p style="text-align: center;"><a href="https://www.tindie.com/stores/JRodrigo/" target="_blank"><img src="images/tindie.png" alt="tindie" width="202"></a></p>
 
         </aside>
       </div>
